--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,8 @@ terraform.tfstate
 .terraform
 Day-1/terraform.tfstate.backup
 Day-1/.terraform.lock.hcl
+nginx-modular-approach/.terraform.lock.hcl
+nginx-modular-approach/terraform.tfstate.backup
+nginx-web-server/terraform.tfstate.backup
+nginx-web-server/terraform.tfstate.backup
+nginx-web-server/terraform.tfstate.backup
